fix: navbar width and buttons alignment fixed

--- a/front_end/src/components/Navbar.module.css
+++ b/front_end/src/components/Navbar.module.css
@@ -4,8 +4,8 @@
 }
 
 .navbarContainer {
-  position: absolute;
-  width: 1440px;
+  position: relative;
+  width: 100%;
   height: 41px;
   left: 0px;
   top: 0px;
@@ -60,7 +60,7 @@
   position: absolute;
   width: 95.86px;
   height: 54.57px;
-  left: 1220px;
+  right: 96px;
   top: -8px;
   border-radius: 3.57143px;
 }
@@ -80,7 +80,7 @@
   position: absolute;
   width: 95.86px;
   height: 54.57px;
-  left: 1303px;
+  right: 0;
   top: -8px;
   border-radius: 3.57143px;
 }
